// Vitest Snapshot v1

exports[`Select > :props > :bordered 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :clearable 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :creatable 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :disabled 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-is-disabled t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :labelInValue 1`] = `
<div
  class="t-select__wrap"
  labelinvalue="false"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :loading 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <!---->
    <!---->
    <div
      class="t-loading--center t-size-s t-loading t-select__right-icon t-select__active-icon t-select__right-icon-polyfill"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="small"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :multiple 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    
    
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :placeholder 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      please select
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :remote 1`] = `
<div
  class="t-select__wrap"
  remote="true"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :reserveKeyword 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select > :props > :size 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-l t-select__popup-reference"
  >
    <!---->
    <span
      class="t-select__placeholder"
    >
       
      请选择
    </span>
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-l"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <!---->
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <!---->
</div>
`;

exports[`Select Option > :props > :disabled 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <!---->
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <span
      class="t-select__single"
      title="1"
    >
      1
    </span>
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <div
    style="display: none;"
  >
    
    <li
      class="t-select-option t-is-disabled t-is-selected t-size-m"
      title="1"
    >
      <span>
        1
      </span>
    </li>
    
  </div>
</div>
`;

exports[`Select Option > :props > :label 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <!---->
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <span
      class="t-select__single"
      title="1"
    >
      1
    </span>
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <div
    style="display: none;"
  >
    
    <li
      class="t-select-option t-is-selected t-size-m"
      title="1"
    >
      <span>
        1
      </span>
    </li>
    
  </div>
</div>
`;

exports[`Select Option > :props > :value 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <!---->
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <span
      class="t-select__single"
      title="1"
    >
      1
    </span>
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <div
    style="display: none;"
  >
    
    <li
      class="t-select-option t-is-selected t-size-m"
      title="1"
    >
      <span>
        1
      </span>
    </li>
    
  </div>
</div>
`;

exports[`Select OptionGroup > :props > :value 1`] = `
<div
  class="t-select__wrap"
>
  
  <div
    class="t-select t-select-polyfill t-size-m t-select__popup-reference"
  >
    <!---->
    <!---->
    <!---->
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      style="display: none;"
    >
      <!---->
      
      +0
      
      <!---->
    </span>
    <span
      class="t-select__single"
      title="1"
    >
      1
    </span>
    <!---->
    <svg
      class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
    <!---->
    <!---->
  </div>
  <!---->
  
  <div
    style="display: none;"
  >
    
    <li
      class="t-select-option-group t-size-m t-select-option-group__divider"
    >
      <div
        class="t-select-option-group__header"
      >
        num
      </div>
      <ul>
        
        <li
          class="t-select-option t-is-selected t-size-m"
          title="1"
        >
          <span>
            1
          </span>
        </li>
        
      </ul>
    </li>
    <li
      class="t-select-option-group t-size-m t-select-option-group__divider"
    >
      <div
        class="t-select-option-group__header"
      >
        abc
      </div>
      <ul>
        
        <li
          class="t-select-option t-size-m"
          title="a"
        >
          <span>
            a
          </span>
        </li>
        
      </ul>
    </li>
    
  </div>
</div>
`;
